--- a/index - About.html
+++ b/index - About.html
@@ -2,7 +2,7 @@
 <html lang="en">
   
 <head>
-    <link rel="stylesheet" href="..\css - Copy\index.css">
+    <link rel="stylesheet" href="../UX_UI_HW_17/css - Copy/index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
@@ -10,7 +10,7 @@
 <body>
     <header class = "header">
         <div class="logo1">
-          <a href="#"><img src="..\My logo.png" alt="My logo" width="26.5" height="42">
+          <a href="#"><img src="../UX_UI_HW_17/My logo.png" alt="My logo" width="26.5" height="42">
             
     </a>
         </div>
@@ -28,7 +28,7 @@
     <section class="heroimg">
         <h1>Hi, I'm Betelehem</h1>
         <div class="content">
-         <img src="..\My picture.jpg" alt="My picture" width="212" height="244">
+         <img src="../UX_UI_HW_17/My picture.jpg" alt="My picture" width="212" height="244">
          <form action="www.linkedin.com/in/betelehem-abebe-8934171b1" methof="get" target="_blank">
             <button type="submit"> RESUME</button>
         </form> 
@@ -43,7 +43,7 @@
 
     <footer class = "header">
         <div class="logo1">
-          <a href="#"><img src="..\My logo.png" alt="My logo" width="26.5" height="42">
+          <a href="#"><img src="../UX_UI_HW_17/My logo.png" alt="My logo" width="26.5" height="42">
             
     </a>
         </div>
